fix spacing

--- a/src/static/css/components/_post.scss
+++ b/src/static/css/components/_post.scss
@@ -30,6 +30,7 @@
       h2 {
         font-weight: _font(weight-heading-extrabold);
         font-size: 2.5em;
+        line-height: 2.3rem;
       }
 
       > :last-child {
